# rtrec

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
.streamlit/: config.toml
dockerfiles/: Dockerfile  Dockerfile-experiment  build.sh  constraints.txt  requirements.txt  run_notebook_server.sh  run_shell.sh  run_streamlit.sh
examples/deprecated/: recommender.py  slim.py
examples/streamlit/: movielens_dashboard.py
examples/streamlit/movielens/: README.md  movielens_dashboard.py  requirements.txt
experiments/: datasets.py  experiments.py  utils.py
notebooks/: h-and-m.ipynb  quickstart_colab.ipynb  rtrec-movielens-with-features.ipynb  rtrec-movielens.ipynb
rtrec/: __init__.py  recommender.py
rtrec/experiments/: datasets.py  experiments.py  kaggle_datasets.py  split.py  utils.py
rtrec/models/: __init__.py  base.py  bprslim.py  fm.py  hybrid.py  implicit_fm.py  lightfm.py  slim.py  slim_elastic.py
rtrec/models/internal/: lightfm_wrapper.py  slim_elastic.py
rtrec/serving/: app.py  dependencies.py
rtrec/tools/: kinesis_consumer.py
rtrec/utils/: cache.py  collections.py  datasets.py  diskcache.py  eta.py  features.py  identifiers.py  interactions.py  lang.py  lrfu.py  lru.py  math.py  matrix.py  metrics.py  multiprocessing.py  optim.py  pandas.py  regularization.py  scoring.py
samples/streamlit/: movielens_dashboard.py
src/: datasets.rs  ftrl.rs  identifiers.rs  interactions.rs  lib.rs  optimizers.rs  slim.rs
src/rtrec/: ftrl.rs  lib.rs  mod.rs
tests/: test_datasets.rs  test_identifiers.rs  test_interactions.rs  test_slim.rs  test_slim_rs.py
tests/models/: test_fastslim.py  test_hybrid.py  test_lightfm.py  test_serialization.py  test_slim.py  test_slim_rs.py  test_slim_serde.py
tests/serving/: test_app.py
tests/utils/: test_cache.py  test_collections.py  test_datasets.py  test_diskcache.py  test_dok_matrix.py  test_eta.py  test_features.py  test_interactions.py  test_lang.py  test_lru.py  test_matrix.py  test_metrics.py  test_regularization.py
