[package]
name = "rtrec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rtrec"  # This should match the module name
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.0" # MessagePack support for Serde
serde_derive = "1.0" # Derive macros for Serde
rusoto_core = "0.46"
rusoto_s3 = "0.46"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
rayon = "1.10.0"
env_logger = "0.11.5"

[dependencies.pyo3]
version = "0.19"

[dev-dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
pretty_assertions = "1.4.1"
approx = "0.5.1"

[features]
extension-module = ["pyo3/extension-module"]

[package.metadata.maturin]
bindings = "pyo3"
