[package]
name = "rtrec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rtrec"  # This should match the module name
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.0" # MessagePack support for Serde
serde_derive = "1.0" # Derive macros for Serde
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
rayon = "1.10.0"
env_logger = "0.11.5"
hashbrown = { version = "0.15.1", features = ["serde"] }
polars = { version = "0.44.2", features = ["random"] }
# pyo3-polars is locked to pyo3 0.21.x
pyo3 = "0.21"
pyo3-polars = "0.18.0"
rand = "0.8.5"
itertools = "0.13.0"
# kdam 0.6.0 depends on pyo 0.22
kdam = { version = "0.5.2", features = ["notebook"] }
erased-serde = "0.4.5"
serde_flexitos = "0.2.2"

[dev-dependencies]
rand_distr = "0.4.3"
pretty_assertions = "1.4.1"
approx = "0.5.1"

[features]
extension-module = ["pyo3/extension-module"]

[package.metadata.maturin]
bindings = "pyo3"
