[package]
name = "rtrec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rtrec"  # This should match the module name
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0" # Derive macros for Serde
rmp-serde = "1.0" # MessagePack support for Serde
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.11.5"
rayon = "1.10.0"
hashbrown = { version = "0.15.1", features = ["serde"] }
pyo3 = "0.21"
rand = "0.8.5"
erased-serde = "0.4.5"
serde_flexitos = "0.2.2"

[dev-dependencies]
rand_distr = "0.4.3"
pretty_assertions = "1.4.1"
approx = "0.5.1"

[features]
extension-module = ["pyo3/extension-module"]

[package.metadata.maturin]
bindings = "pyo3"
