[project]
name = "rtrec"
version = "0.1.0"
description = "An realtime recommendation system supporting online updates"
authors = [
    { name = "myui", email = "myui@apache.org" }
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "numpy>=2.1.2",
    "scikit-learn>=1.5.2",
    "pandas>=2.2.3",
    "fastapi>=0.115.4",
    "pydantic>=2.9.2",
    "uvicorn>=0.32.0",
    "httpx>=0.27.2",
    "boto3>=1.35.50",
    "tqdm>=4.67.0",
    "scipy>=1.14.1",
    # see https://github.com/lyst/lightfm/issues/709
    "lightfm @ git+https://github.com/daviddavo/lightfm",
    "optuna>=4.1.0",
    "implicit>=0.7.2",
]

classifiers = [
    "Programming Language :: Python"
]

[project.urls]
homepage = "https://github.com/myui/rtrec"
repository = "https://github.com/myui/rtrec"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "scipy>=1.14.1",
    "streamlit>=1.41.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["rtrec"]

[tool.pytest.ini_options]
addopts = "-s"
testpaths = [ "tests" ]
