[project]
name = "rtrec"
version = "0.1.8"
description = "A realtime recommendation system supporting online updates"
authors = [
    { name = "myui", email = "myui@apache.org" }
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    # Requires NumPy >= 1.21.0 for features like the improved random number generator API
    "numpy>=1.21.0,<3.0.0",

    # Requires SciPy >= 1.5.0 for compatibility with Python >= 3.10
    "scipy>=1.5.0,<2.0.0",

    # Scikit-learn >= 1.1.0 for compatibility with NumPy/SciPy; < 2.0.0 to avoid upcoming major changes
    "scikit-learn>=1.1.0,<2.0.0",

    # Requires pandas >= 1.3.0 for features like enhanced I/O support and typing improvements
    "pandas>=1.3.0,<3.0.0",

    # Requires FastAPI >= 0.70.0 for lifecycle events and bug fixes
    "fastapi>=0.70.0,<1.0.0",

    # Requires Pydantic >= 1.10.0 for compatibility with FastAPI and enhanced validation
    "pydantic>=1.10.0,<3.0.0",

    # Requires Uvicorn >= 0.18.0 for HTTP/3 support and updated ASGI server capabilities
    "uvicorn>=0.18.0,<1.0.0",

    # Requires HTTPX >= 0.20.0 for HTTP/2 support and performance improvements
    "httpx>=0.20.0,<1.0.0",

    # Requires Boto3 >= 1.20.0 for features like S3 Object Lambda support
    "boto3>=1.20.0,<2.0.0",

    # Requires Tqdm >= 4.60.0 for asynchronous iterator support and other improvements
    "tqdm>=4.60.0,<5.0.0",

    # Compatible version of rectools-lightfm for Python 3.12
    "rectools-lightfm>=1.17.3,<2.0.0",

    # Requires Implicit >= 0.6.0 for performance optimizations in matrix factorization
    "implicit>=0.6.0,<1.0.0",

    # Typing-extensions >= 4.0.0 for forward compatibility of typing features across Python versions
    "typing-extensions>=4.0.0,<5.0.0",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

keywords = [
    "recsys",
    "recommendation systems",
    "recommender",
    "machine learning",
    "personalization",
]

[project.urls]
homepage = "https://github.com/myui/rtrec"
repository = "https://github.com/myui/rtrec"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    # Requires pytest >= 7.0.0 for Python 3.10 compatibility
    "pytest>=7.0.0,<9.0.0",

    # Requires Streamlit >= 1.10.0 for session state improvements
    "streamlit>=1.10.0,<2.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["rtrec"]

[tool.pytest.ini_options]
addopts = "-s"
testpaths = [ "tests" ]
